:bug:fix(player):z index of song title is now behind player so player can be clicked

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -859,6 +859,7 @@ $animate-sec: 1.5s;
     left: 60px;
     font-size: 20px;
     text-transform: uppercase;
+    z-index: -1;
 }
 
   .userPlayButton{
